prepare to merge (test3)

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -36401,6 +36401,9 @@ gate</string>
          <bold>true</bold>
         </font>
        </property>
+       <property name="toolTipDuration">
+        <number>2147483647</number>
+       </property>
        <property name="statusTip">
         <string notr="true"/>
        </property>
@@ -37195,6 +37198,9 @@ gate</string>
          <bold>true</bold>
         </font>
        </property>
+       <property name="toolTipDuration">
+        <number>2147483647</number>
+       </property>
        <property name="statusTip">
         <string notr="true"/>
        </property>
@@ -37635,6 +37641,9 @@ gate</string>
          <bold>true</bold>
         </font>
        </property>
+       <property name="toolTipDuration">
+        <number>2147483647</number>
+       </property>
        <property name="statusTip">
         <string notr="true"/>
        </property>
@@ -38068,6 +38077,9 @@ gate</string>
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="toolTipDuration">
+        <number>2147483647</number>
        </property>
        <property name="statusTip">
         <string notr="true"/>
@@ -38505,6 +38517,9 @@ gate</string>
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="toolTipDuration">
+        <number>2147483647</number>
        </property>
        <property name="statusTip">
         <string notr="true"/>
@@ -57395,6 +57410,9 @@ td    { border: 1px solid grey; padding: 2px; }
       <property name="toolTip">
        <string notr="true">bunch in both beams AND OrC</string>
       </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
+      </property>
       <property name="statusTip">
        <string notr="true"/>
       </property>
@@ -57845,7 +57863,7 @@ td    { border: 1px solid grey; padding: 2px; }
      <widget class="QLabel" name="labelTextTriggers_7A">
       <property name="geometry">
        <rect>
-        <x>515</x>
+        <x>516</x>
         <y>8</y>
         <width>100</width>
         <height>15</height>
@@ -57861,6 +57879,9 @@ td    { border: 1px solid grey; padding: 2px; }
       </property>
       <property name="toolTip">
        <string notr="true">both sides OR (OrA &amp; OrC)</string>
+      </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
       </property>
       <property name="statusTip">
        <string notr="true"/>
@@ -57997,6 +58018,9 @@ td    { border: 1px solid grey; padding: 2px; }
       <property name="toolTip">
        <string notr="true">bunch in both beams AND OrA AND OrC</string>
       </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
+      </property>
       <property name="statusTip">
        <string notr="true"/>
       </property>
@@ -58086,6 +58110,9 @@ td    { border: 1px solid grey; padding: 2px; }
       </property>
       <property name="toolTip">
        <string notr="true">bunch in both beams AND Vertex</string>
+      </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
       </property>
       <property name="statusTip">
        <string notr="true"/>
@@ -58222,6 +58249,9 @@ td    { border: 1px solid grey; padding: 2px; }
       <property name="toolTip">
        <string notr="true">bunch in both beams AND OrA</string>
       </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
+      </property>
       <property name="statusTip">
        <string notr="true"/>
       </property>
@@ -58356,6 +58386,9 @@ td    { border: 1px solid grey; padding: 2px; }
       </property>
       <property name="toolTip">
        <string notr="true">C-side out-of-gate hits AND NOT OrC</string>
+      </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
       </property>
       <property name="statusTip">
        <string notr="true"/>
@@ -58537,6 +58570,9 @@ td    { border: 1px solid grey; padding: 2px; }
       <property name="toolTip">
        <string notr="true">NoiseA OR NoiseC</string>
       </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
+      </property>
       <property name="statusTip">
        <string notr="true"/>
       </property>
@@ -58671,6 +58707,9 @@ td    { border: 1px solid grey; padding: 2px; }
       </property>
       <property name="toolTip">
        <string notr="true">A-side out-of-gate hits AND NOT OrA</string>
+      </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
       </property>
       <property name="statusTip">
        <string notr="true"/>
@@ -58852,6 +58891,9 @@ td    { border: 1px solid grey; padding: 2px; }
       <property name="toolTip">
        <string notr="true">bunch ONLY in beam 1 AND OrC</string>
       </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
+      </property>
       <property name="statusTip">
        <string notr="true"/>
       </property>
@@ -58941,6 +58983,9 @@ td    { border: 1px solid grey; padding: 2px; }
       </property>
       <property name="toolTip">
        <string notr="true">bunch ONLY in beam 2 AND OrA</string>
+      </property>
+      <property name="toolTipDuration">
+       <number>2147483647</number>
       </property>
       <property name="statusTip">
        <string notr="true"/>
